tests/snapshots/render/dumb@commonmark-spec-084-setext_headings.snap
---
source: tests/render.rs
assertion_line: 111
expression: "render_to_string(markdown_file, &dumb_settings)"
input_file: tests/markdown/commonmark-spec/084-setext_headings.md
snapshot_kind: text
---
Foo
────────────────────────────────────────────────────────────────────────────────

Foo
────────────────────────────────────────────────────────────────────────────────

Foo
════════════════════════════════════════════════════════════════════════════════
